--- a/cabins.html
+++ b/cabins.html
@@ -153,7 +153,7 @@
 
         </div>
     
-        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
